add title block

--- a/albumapp/templates/album_lists.html
+++ b/albumapp/templates/album_lists.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block title %}
+	Making Lists of Music
+{% endblock %}
 
+{% block content %}
 	All Lists:
 	<br>
 	<br>
