--- a/albumapp/templates/base.html
+++ b/albumapp/templates/base.html
@@ -1,5 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en">
+	<head>
+		<title>
+			Michael P. Geraci - {% block title %}{% endblock %}
+		</title>
+	</head>
 	<body>
 		{% block content %}{% endblock %}
 	</body>
