add buy-link classes, fix buy link lookup

--- a/albumapp/static/stylesheets/style.sass
+++ b/albumapp/static/stylesheets/style.sass
@@ -132,7 +132,7 @@ img
     span
       font-size: 40px
 
-  .text
+  .description
     +stackwide
     margin:
       top: 35px
@@ -168,7 +168,7 @@ img
     &:hover
       opacity: 1
 
-    &.personal
+    &.text
       bottom: 2px
       right: 8px
       font-size: 20px
