some style tweaks, add art folder to gitignore

--- a/albumapp/static/stylesheets/style.sass
+++ b/albumapp/static/stylesheets/style.sass
@@ -54,6 +54,12 @@ h3
   text-align: center
   font-size: 18px
 
+  a
+    color: $text
+
+    &:hover
+      color: $cream
+
 
 // album lists
 ////////////////////////////////////////////////////////////////////////////////
@@ -102,7 +108,12 @@ li:nth-child(7)
   .count
     top: -30px
 
-li:nth-child(10)
+li:nth-child(10),
+li:nth-child(11),
+li:nth-child(12),
+li:nth-child(13),
+li:nth-child(14),
+li:nth-child(15)
   .count
     letter-spacing: -70px
     left: -230px
