render html in album descriptions

--- a/albumapp/templates/album_list.html
+++ b/albumapp/templates/album_list.html
@@ -46,7 +46,7 @@
 
 					{% if selection.description %}
 						<div class="description">
-							{{ selection.description }}
+							{{ selection.description|safe }}
 						</div>
 					{% endif %}
 
