be more self-deprecating

--- a/albumapp/static/css/style.sass
+++ b/albumapp/static/css/style.sass
@@ -178,10 +178,10 @@ img
     float: left
     margin-left: 10px
     font-size: 24px
-    padding: 5px 8px
+    //padding: 5px 8px
     position: relative
     overflow: hidden
-    line-height: 500px
+    //line-height: 500px
     opacity: 0.5
     @include transition(opacity 100ms linear)
 
@@ -191,14 +191,14 @@ img
     &:hover
       opacity: 1
 
-    &.text
-      bottom: 2px
-      right: 8px
-      font-size: 20px
-      line-height: normal
-      text-decoration: none
-      text-transform: lowercase
-      color: $text
+    //&.text
+      //bottom: 2px
+      //right: 8px
+      //font-size: 20px
+      //line-height: normal
+      //text-decoration: none
+      //text-transform: lowercase
+      //color: $text
 
 #thanks
   +stackwide
