--- a/albumapp/templates/album_list.html
+++ b/albumapp/templates/album_list.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-	<h3>I don&rsquo;t know if you care, but here are</h2>
+	<h3>I know you don&rsquo;t care, but here are</h2>
 	<h1>{{ list.name }}</h1>
 
 	<div class="links">
