add email link, make more fields html safe

--- a/albumapp/static/css/style.sass
+++ b/albumapp/static/css/style.sass
@@ -184,12 +184,14 @@ img
     //line-height: 500px
     opacity: 0.5
     @include transition(opacity 100ms linear)
+    font-size: 20px
 
     &:first-child
       margin-left: 0
 
     &:hover
       opacity: 1
+      color: $text
 
     //&.text
       //bottom: 2px
