remove envronment exception block for heroku; move menu into its own template

--- a/albumapp/templates/base.html
+++ b/albumapp/templates/base.html
@@ -12,33 +12,7 @@
 	</head>
 	<body>
 
-		<div id="menuWrapper" class="wrapOut">
-			<div class="wrapIn">
-				<ul id="menu">
-					<li>
-						<a class="bio" href="/">Bio/Resume</a>
-					</li>
-					<li>
-						<a class="web" href="/web">Web Design</a>
-					</li>
-					<li>
-						<a class="photo" href="/photography">Photography</a>
-					</li>
-					<li>
-						<a class="graphic" href="/graphic">Graphic Design</a>
-					</li>
-					<li>
-						<a class="composition" href="/composition">Compositions and Multimedia</a>
-					</li>
-					<li>
-						<a class="recordings" href="/recordings">Recordings</a>
-					</li>
-					<li>
-						<a class="links" style="margin-right: 0px;" href="/links">Links</a>
-					</li>
-				</ul>
-			</div>
-		</div>
+		{% include "menu.html" %}
 
 		<div id="contentWrapper" class="wrapOut">
 			<div class="wrapIn">
